# wenet_api

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run.sh  wav.h
libs/include/: wenet_api.h
